--- a/ES-S2-G5/ES-S2-G5.csproj
+++ b/ES-S2-G5/ES-S2-G5.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\images\Jordan 4.jpg" />
+  </ItemGroup>
+
 </Project>
